Adapt scalar integration tests